@@ -1,5 +1,5 @@
 /* Name: usbdrvasm165.inc
- * Project: AVR USB driver
+ * Project: V-USB, virtual USB port for Atmel's(r) AVR(r) microcontrollers
  * Author: Christian Starkjohann
  * Creation Date: 2007-04-22
  * Tabsize: 4
